test/fail_compilation/imports/test314b.d
module imports.test314b;

import imp = imports.test314imp;
